--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
                     <h3>80% completed</h3>
                 </div>
 
+               <div class="box">
+                    <span>JavaScript</span>
+                    <h3>50% completed</h3>
+                </div>
+
+
+               <div class="box">
+                <span>SQL</span>
+                <h3>60% completed</h3>
+            </div>
+
 
 
             </div>
