--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
                         <p>• Played a key part in growing the business by spotting new opportunities and forming strategic partnerships.</p>
 
             </div>
+            <div class="box-container">
+                <div class="box">
+                    <div class="box-container"></div>
+                    <span>Aug 2024 Currently working</span>
+                    <p> PolicyBazaar.<br>
+                         Associate Sales Consultant<br>
+                        <p> •  Role: Assist customers in buying various financial products, focusing on insurance policies, over the phone. </p>
         </div>
 
     </section>
