--- a/index.html
+++ b/index.html
@@ -144,8 +144,11 @@
                     <div class="box-container"></div>
                     <span>Aug 2024 Currently working</span>
                     <p> PolicyBazaar.<br>
-                         Associate Sales Consultant<br>
-                        <p> •  Role: Assist customers in buying various financial products, focusing on insurance policies, over the phone. </p>
+                        Associate Sales Consultant<br>
+                    <p> • Role: Assist customers in buying various financial products, focusing on insurance policies,
+                        over the phone. </p>
+                </div>
+            </div>
         </div>
 
     </section>
