--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="home" id="home">
 
         <h3>HI THERE !</h3>
-        <h1>I'M <span>Saurabh Kumar</span></h1>
+        <h1>I'M <span>Saurabh Singh</span></h1>
         <p> I have completed my bachelor's degree in Computer Science. I'm a highly motivated Computer Science graduate
             with a passion for problem-solving. I have experience in application and web development and am proficient
             in JavaScript, HTML, CSS and SQL. I am committed to delivering efficient and innovative solutions.
@@ -72,7 +72,7 @@
 
             <div class="info">
                 <h3> <span> name : </span> Saurabh </h3>
-                <h3> <span> age : </span> 22 </h3>
+                <h3> <span> age : </span> 23 </h3>
                 <h3> <span> qualification : </span> B.Tech (CS) </h3>
                 <h3> <span> post : </span> Web Developer </h3>
                 <h3> <span> language : </span> English,hindi </h3>
@@ -144,12 +144,21 @@
                 <div class="box-container">
                     <div class="box">
                         <div class="box-container"></div>
-                        <span>Aug 2024 Currently working</span>
+                        <span>Aug 2024 - March 2025</span>
                         <p> PolicyBazaar.<br>
                             Associate Sales Consultant<br>
                         <p> • Role: Assist customers in buying various financial products, focusing on insurance policies,
                             over the phone. </p>
                     </div>
+                    <div class="box-container"></div>
+                       <div class="box">
+                           <div class="box-container"></div>
+                           <span>March 2025 - Currrently Working</span>
+                           <p> InsuranceDekho.<br>
+                               Relationship Manager<br>
+                               <p>• Built strong relationships with clients.</p>
+                               <p>• Successfully contribute to sales initiatives, consistently exceeding targets by leveraging experties in sales techniques and product knowledge.</p>
+
                 </div>
             
         </div>
